fix: change font-style to unset to prevents issues when wrapped by em

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -390,7 +390,7 @@ kbd::after {
 
 cite,
 dfn {
-  font-style: normal;
+  font-style: unset;
 }
 
 q {
